--- a/WeatherApp/Views/ForecastWeather/ForecastWeather.xib
+++ b/WeatherApp/Views/ForecastWeather/ForecastWeather.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -17,97 +17,103 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="☀️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6j-zD-Ffj">
-                    <rect key="frame" x="0.0" y="134.5" width="71" height="21"/>
+                    <rect key="frame" x="0.0" y="134.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="☀️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="euo-Ht-uVK">
-                    <rect key="frame" x="76" y="134.5" width="71" height="21"/>
+                    <rect key="frame" x="76" y="134.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="☀️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0B-YM-WRl">
-                    <rect key="frame" x="152" y="134.5" width="71" height="21"/>
+                    <rect key="frame" x="152" y="134.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="☀️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jKL-13-Pbu">
-                    <rect key="frame" x="228" y="134.5" width="71" height="21"/>
+                    <rect key="frame" x="228" y="134.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="☀️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T1A-xh-yI5">
-                    <rect key="frame" x="304" y="134.5" width="71" height="21"/>
+                    <rect key="frame" x="304" y="134.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="42°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5aU-zx-VAv">
-                    <rect key="frame" x="0.0" y="165.5" width="71" height="21"/>
+                    <rect key="frame" x="0.0" y="165.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="42°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vqg-xu-e4r">
-                    <rect key="frame" x="76" y="165.5" width="71" height="21"/>
+                    <rect key="frame" x="76" y="165.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="42°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M26-aI-Oii">
-                    <rect key="frame" x="152" y="165.5" width="71" height="21"/>
+                    <rect key="frame" x="152" y="165.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="42°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WgE-Nv-RQ7">
-                    <rect key="frame" x="228" y="165.5" width="71" height="21"/>
+                    <rect key="frame" x="228" y="165.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="42°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v56-eX-gcS">
-                    <rect key="frame" x="304" y="165.5" width="71" height="21"/>
+                    <rect key="frame" x="304" y="165.66666666666666" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2/2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQx-4z-09k">
-                    <rect key="frame" x="0.0" y="103.5" width="71" height="21"/>
+                    <rect key="frame" x="0.0" y="103.66666666666667" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2/3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tiS-4T-34B">
-                    <rect key="frame" x="76" y="103.5" width="71" height="21"/>
+                    <rect key="frame" x="76" y="103.66666666666667" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2/4" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qWo-WD-6Vz">
-                    <rect key="frame" x="152" y="103.5" width="71" height="21"/>
+                    <rect key="frame" x="152" y="103.66666666666667" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2/5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvI-9T-PXS">
-                    <rect key="frame" x="228" y="103.5" width="71" height="21"/>
+                    <rect key="frame" x="228" y="103.66666666666667" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2/6" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9nZ-hZ-tBd">
-                    <rect key="frame" x="304" y="103.5" width="71" height="21"/>
+                    <rect key="frame" x="304" y="103.66666666666667" width="71" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 Day Weather Forecast" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N39-ga-TZ8">
+                    <rect key="frame" x="95.666666666666686" y="10" width="184" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" red="0.96862745100000003" green="0.58039215690000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="9nZ-hZ-tBd" firstAttribute="leading" secondItem="fvI-9T-PXS" secondAttribute="trailing" constant="5" id="1Wv-5M-sBB"/>
                 <constraint firstItem="tiS-4T-34B" firstAttribute="bottom" secondItem="wQx-4z-09k" secondAttribute="bottom" id="1eW-cq-wLt"/>
@@ -129,6 +135,7 @@
                 <constraint firstItem="T1A-xh-yI5" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Qd8-yG-yt6"/>
                 <constraint firstItem="vqg-xu-e4r" firstAttribute="top" secondItem="5aU-zx-VAv" secondAttribute="top" id="TCz-KI-W9E"/>
                 <constraint firstItem="v56-eX-gcS" firstAttribute="width" secondItem="5aU-zx-VAv" secondAttribute="width" id="Tvp-pp-DYs"/>
+                <constraint firstItem="N39-ga-TZ8" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="VEQ-A6-5lN"/>
                 <constraint firstItem="qWo-WD-6Vz" firstAttribute="leading" secondItem="tiS-4T-34B" secondAttribute="trailing" constant="5" id="WCM-ng-BAm"/>
                 <constraint firstItem="jKL-13-Pbu" firstAttribute="leading" secondItem="n0B-YM-WRl" secondAttribute="trailing" constant="5" id="WQZ-bV-w38"/>
                 <constraint firstItem="vqg-xu-e4r" firstAttribute="leading" secondItem="5aU-zx-VAv" secondAttribute="trailing" constant="5" id="XoI-hO-ByT"/>
@@ -144,6 +151,7 @@
                 <constraint firstItem="fvI-9T-PXS" firstAttribute="width" secondItem="wQx-4z-09k" secondAttribute="width" id="hrw-eU-nyS"/>
                 <constraint firstItem="v56-eX-gcS" firstAttribute="top" secondItem="WgE-Nv-RQ7" secondAttribute="top" id="jPg-Xd-DoW"/>
                 <constraint firstItem="jKL-13-Pbu" firstAttribute="width" secondItem="R6j-zD-Ffj" secondAttribute="width" id="kNC-69-3TS"/>
+                <constraint firstItem="N39-ga-TZ8" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="mHs-dL-XHY"/>
                 <constraint firstItem="euo-Ht-uVK" firstAttribute="width" secondItem="R6j-zD-Ffj" secondAttribute="width" id="nkZ-fX-bvR"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="v56-eX-gcS" secondAttribute="trailing" id="q38-5I-f6f"/>
                 <constraint firstItem="vqg-xu-e4r" firstAttribute="width" secondItem="5aU-zx-VAv" secondAttribute="width" id="rqP-aV-jyM"/>
