--- a/WeatherApp/ViewControllers/Base.lproj/Main.storyboard
+++ b/WeatherApp/ViewControllers/Base.lproj/Main.storyboard
@@ -46,9 +46,9 @@
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <connections>
-                        <outlet property="locationTextField" destination="ivU-X6-l3X" id="dUN-4W-VaC"/>
                         <outlet property="pageControl" destination="azK-oR-AdT" id="ETn-fE-Poj"/>
                         <outlet property="scrollView" destination="2uS-Ub-Fyp" id="tJ9-g4-tec"/>
+                        <outlet property="textField" destination="ivU-X6-l3X" id="bk9-JE-gkl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
